# sysmic-engine-python

./: .gitignore  LICENSE  README.md  STP move to point  build.sh  default.nix  firmas.md.save  joystick_test.sh  radio_test.py  radio_test_copy.py  radio_test_two_joy.py  run.sh
Tutorial/: FIrmas
algo_commander/: CMakeLists.txt  build.sh  config.hpp  docs.md  field.hpp  main.cpp  packet_handler.hpp  python_file.py  robot.hpp  robot_handler.hpp  route.hpp  route_handler.hpp
algo_commander/dependencies/: CMakeLists.txt
algo_commander/src/: CMakeLists.txt  Install.cmake  main.cpp  packet_receiver.hpp  packet_sender.hpp
algo_commander/src/gui/: gui_handler.hpp
algo_commander/src/proto/: AlgoCommander.cs  algo_commander.proto  algo_commander_pb2.py
docs/: 1. Getting Started.md  Grsim Commands.md
engine-env/: pyvenv.cfg
gui/: Error.md  README.md  imgui.ini
gui/src/: config.hpp  field.hpp  main.cpp  packet_handler.hpp
new_gui/: README.md  buf.gen.yaml  package-lock.json  package.json
new_gui/src/: App.tsx
python-engine/: requirements.txt  task_1.py
python-engine/protobuf/: protobuf.md
python-engine/src/: config.ini  constants.py  main.py  robot_comunication.py  task_1.md  task_1.py
tutorial/: firmas.md  task_1.md
tutorial/pautas/: task_0.md  task_1.md
tutorial/tasks/: task_0.md  task_1.md
tutorials/: firmas.md
ui/: .gitignore  README.md  build.sh  index.html  main.js  package-lock.json  package.json  tailwind.config.js
ui/js/: communication.js  data.js
ui_react/: index.html  package-lock.json  package.json  tailwind.config.cjs
(+95 files in other folders)
